<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Price Shoes</string>
    <string name="action_settings">Settings</string>
    <string name="string_Cliente">Cliente</string>
    <string name="string_HintCliente">Nombre(s) Apellido(s)</string>
    <string name="string_Anadir">Agregar</string>
    <string name="string_Editar">Editar</string>
    <string name="string_Resumen">Resumen</string>
    <string name="string_Clientes">Clientes</string>
    <string name="string_Guardar">Guardar</string>
    <string name="string_Cancelar">Cancelar</string>
    <string name="string_Borrar">Borrar</string>
    <string name="title_activity_ventas">Ventas</string>
    <string name="title_activity_compras">Compras</string>
    <string name="title_resumen">Resumen</string>
    <string name="string_Ventas">Ventas</string>
    <string name="title_activity_clientes">Clientes</string>
    <string name="title_activity_resumen__cliente">Resumen_Cliente</string>
    <string name="hello_world">Hello world!</string>
    <string name="string_Compras_Pendientes">Compras Pendientes</string>
    <string name="string_Ventas_Realizadas">Ventas Realizadas</string>
    <string name="string_Total_Ventas">Total Ventas</string>
    <string name="string_Pedidos">Pedidos</string>
    <string name="string_Pagos">Pagos</string>
    <string name="string_Monto_Abonado">Monto Abonado</string>
    <string name="string_MontoPendiente">Monto Pendiente</string>
    <string name="string_Anadir_Pedido">Agregar Pedido</string>
    <string name="string_Catalogo">Catalogo</string>
    <string name="string_Pagina">Pagina</string>
    <string name="string_Numero">Numero</string>
    <string name="string_Marca">Marca</string>
    <string name="string_ID">ID</string>
    <string name="string_Costo">Costo</string>
    <string name="string_Precio">Precio</string>
    <string name="string_HacerPedido">Hacer Pedido</string>
    <string name="string_Total_Compras">Total Compras</string>
    <string name="string_Agregar_Pago">Agregar Pago</string>
    <string name="title_activity_pagos">Pagos</string>
    <string name="string_Monto_Abonar">Monto a abonar</string>
    <string name="string_Fecha">Fecha</string>
    <string name="string_RealizarPago">Realizar Pago</string>
    <string name="string_Entregar">Entregar</string>
    <string name="string_ganancia">Ganancia</string>
    <string name="title_activity_fragment">Fragment</string>
    <string name="title_activity_fragmento2">Fragmento2</string>
    <string name="title_activity_fragment_holder">FragmentHolder</string>
    <string name="string_Total">Total</string>
    <string name="string_Realizados">Pagos Realizados</string>
    <string name="string_Pendientes">Pagos Pendientes</string>
    <color name="blueprice">#b3ffff</color>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>

</resources>
