<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/drawer_layout"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	        
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="@color/white" >

   	<LinearLayout
   	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

   	    <TextView
   	        android:id="@+id/lbl_Resumen_Compras"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:paddingLeft="10dp"
			android:textSize="18sp"
   	        android:textColor="@color/black"
   	        android:text="@string/string_Compras_Pendientes" />

   	    <TextView
   	        android:id="@+id/txt_Resumen_Numero_Compras"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:paddingLeft="10dp"
   	        android:textSize="18sp"
   	        android:textColor="@color/black"
   	        android:text="0" />

   	</LinearLayout>
    

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp" >

        <ListView
            android:id="@+id/Lista_Resumen_Compras"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true" >

        </ListView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
        android:id="@+id/lbl_Resumen_TotalCompras_Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="Total Compras" />
        
        <TextView
        android:id="@+id/lbl_Resumen_Total_Compras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="0" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:id="@+id/lbl_Resumen_Cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="Cambios" />

    <TextView
        android:id="@+id/txt_Resumen_Numero_Cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="0" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp" >

        <ListView
            android:id="@+id/Lista_Resumen_Cambios"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >
        </ListView>

    </RelativeLayout>
    
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
        
    <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                    
        <TextView
            android:id="@+id/lbl_Resumen_Total_Ventas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/string_Total_Ventas" />

        <TextView
            android:id="@+id/lbl_Resumen_MontoVentas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingRight="10dp"
            android:text="-"
            android:textColor="@color/black"
            android:textSize="15sp" />

        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        
            <TextView
            android:id="@+id/lbl_RCliente_Monto_Pendiente_Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/string_Total_Compras" />
            
            <TextView
                android:id="@+id/lbl_Resumen_TotalCompras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingRight="10dp"
                android:text="-"
                android:textColor="@color/black"
                android:textSize="15sp" />

            </RelativeLayout>

        
            
            <TextView
            android:id="@+id/lbl_Pagos_Pagos_General"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/string_ganancia"
             />

        <TextView
            android:id="@+id/lbl_Resumen_Ganancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="-"
            android:layout_gravity="center_horizontal" />
        
        <TextView
            android:id="@+id/lbl_Dialogo_MarcaMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/string_Monto_Abonado" />
        
        <TextView
        android:id="@+id/lbl_Resumen_MontoAbonado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="-"
        android:layout_gravity="center_horizontal" />
                    
        </LinearLayout>

</ScrollView>

</LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:orientation="vertical" >
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
<!--           <ImageView 
         	android:id="@+id/img_resumen_cliente"
         	android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
         	android:adjustViewBounds="true"
         	android:src="@drawable/ic_launcher"/> 
-->
        </LinearLayout>
    
     <ListView android:id="@+id/left_drawer"
	              android:layout_width="240dp"
	              android:layout_height="match_parent"
	              android:background="@color/white"
	              android:divider="@android:color/transparent"
	              android:choiceMode="singleChoice"
	              style="@style/BlackText" 
	              android:dividerHeight="0dp"/>
</LinearLayout>

</android.support.v4.widget.DrawerLayout>