<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#222"
    android:orientation="horizontal"
    android:padding="3dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btn_Dialogo_Clientes"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top|right"
            android:src="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/lbl_Pagos_Pagos_General"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Detalle Cliente"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lbl_Dialogo_MarcaMostrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Marca"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txt_Dialogo_Marca_Clientes"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:enabled="false"
                    android:gravity="center_vertical|center_horizontal"
                    android:inputType="textPersonName"
                    android:textSize="15sp" >

                    <requestFocus />
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Numero"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txt_Dialogo_Numero_Clientes"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:enabled="false"
                    android:gravity="center_horizontal"
                    android:inputType="textPersonName"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lbl_Dialogo_MostrarID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="ID"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <AutoCompleteTextView
                    android:id="@+id/txt_Dialogo_ID_Clientes"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:enabled="false"
                    android:gravity="center_vertical|center_horizontal"
                    android:inputType="textPersonName"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Costo"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txt_Dialogo_Costo_Clientes"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:enabled="false"
                    android:gravity="center_vertical|center_horizontal"
                    android:inputType="textPersonName"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Pagina"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/txt_Dialogo_Pagina_Clientes"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_Pagos_LeyendaMostrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/string_Catalogo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/txt_Dialogo_Catalogo_Clientes"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_vertical|center"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lbl_Dialogo_MostrarPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Precio"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/txt_Dialogo_Precio_Clientes"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:enabled="false"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                 <Button
                     android:id="@+id/btn_Dialogo_Clientes_Editar"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:text="@string/string_Editar"
                     android:textSize="10sp" />
            
            	<Button
            	    android:id="@+id/btn_Dialogo_Clientes_Guardar"
            	    android:layout_width="wrap_content"
            	    android:layout_height="30dp"
            	    android:layout_marginLeft="82dp"
            	    android:text="@string/string_Guardar"
            	    android:textSize="10sp"
            	    android:visibility="invisible" />

            	<Button
            	    android:id="@+id/btn_Dialogo_Clientes_Cancelar"
            	    android:layout_width="wrap_content"
            	    android:layout_height="30dp"
            	    android:text="@string/string_Cancelar"
            	    android:textSize="10sp"
            	    android:visibility="invisible" />
            
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
 
</LinearLayout>